Fixed the output for determining the type triangle from not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,9 @@
-
+.references{
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  font-size: 30px;
+}
+.image{
+  align-self: center;
+}
